# mrob

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
FGraph/: CMakeLists.txt
FGraph/include/skmr/: FGraph.hpp  FGraphSolve.hpp  factor.hpp  factor_graph_solve.hpp  node.hpp
FGraph/include/skmr/factors/: factor1Pose3d.hpp  nodePose3d.hpp
FGraph/src/: FGraph.cpp  FGraphSolve.cpp  factor.cpp  factor_graph.cpp  factor_graph_solve.cpp
FGraph/src/examples/: example_FGraph.cpp  example_solver.cpp
FGraph/src/factors/: factor2Poses3d.cpp
PCRegistration/: CMakeLists.txt
PCRegistration/include/skmr/: GICP.hpp  arun.hpp  gicp.hpp
PCRegistration/src/: ICPL.cpp  arun.cpp  base_transf.cpp  create_points.cpp  gicp.cpp
PCRegistration/src/examples/: example_align_mth.cpp
benchmarks/: README.md
datasets/: sphere_gt.g2o
doc/: README.md  doxyfile.conf
mrobpy/: CMakeLists.txt  FGraphDensePy.cpp  FGraphPy.cpp  PCPlanesPy.cpp  PCRegistrationPy.cpp  README.md  SE3py.cpp  SE3py.hpp  mrobPy.cpp
python_examples/: FGraph_2d.py  FGraph_2d_anchor.py  FGraph_M3500.py  FGraph_landmark_2d_example.py  FGraph_sphere.py  (+8 more)
src/: CMakeLists.txt  README.md  matrixBase.hpp
src/EigenFactors/: CMakeLists.txt  README.md  plane_factor.cpp
src/EigenFactors/examples/: CMakeLists.txt  example_solve_1_poses.cpp  test_EF_Hessian.cpp
src/EigenFactors/mrob/: factor_graph_ef.hpp  plane_factor.hpp
src/FGraph/: CMakeLists.txt  FGraph.cpp  FGraph.hpp  FGraphBuild.cpp  FGraphBuild.hpp  FGraphConventions.hpp  FGraphSolve.cpp  FGraphSolve.hpp  README.md  factor.cpp  factor.hpp  factor1Pose3d.cpp  factor1Pose3d.hpp  factor2Poses3d.cpp  factor2Poses3d.hpp  factor_graph.cpp  factor_graph_solve.cpp  factor_graph_solve_dense.cpp  node.cpp  node.hpp  nodePose3d.cpp  nodePose3d.hpp  solverDense.cpp  solverDense.hpp  solverDenseGaussNewton.hpp  solver_dense.cpp
src/FGraph/examples/: CMakeLists.txt  Tester.cpp  Tester.h  TestingIO.cpp  TestingIO.h  containers.h  example_FGraph.cpp  example_FGraph_2d.cpp  example_solver.cpp  example_solver2d.cpp  example_solver_2d.cpp  example_solver_3d.cpp  example_solver_3d_landmarks.cpp  example_solver_dense_3d.cpp  trajectory.txt
src/FGraph/factors/: factor1Pose1Landmark2d.cpp  factor1Pose1Landmark3d.cpp  factor1Pose1Plane4d.cpp  factor1Pose1Point3d.cpp  factor1Pose2d.cpp  factor1Pose3d.cpp  factor1Pose3d.hpp  factor2Observation2d.cpp  factor2Odometry2d.cpp  factor2Poses2d.cpp  factor2Poses3d.cpp  factor2Poses3d.hpp  factor2Poses3d2obs.cpp  nodeLandmark2d.cpp  nodeLandmark3d.cpp  nodePlane4d.cpp  nodePoint3d.cpp  nodePose2d.cpp  nodePose3d.cpp  nodePose3d.hpp
src/FGraph/mrob/: CustomCholesky.h  CustomCholesky.hpp  factor.hpp  factor_graph.hpp  factor_graph_solve.hpp  factor_graph_solve_dense.hpp  node.hpp  solver_dense.hpp
src/FGraph/mrob/factors/: factor1Pose1Landmark2d.hpp  factor1Pose1Landmark3d.hpp  factor1Pose1Plane4d.hpp  factor1Pose1Point3d.hpp  factor1Pose2d.h  factor1Pose2d.hpp  factor1Pose3d.hpp  factor2Observation2d.h  factor2Observation2d.hpp  factor2Odometry2d.h  factor2Odometry2d.hpp  factor2Poses2d.h  factor2Poses2d.hpp  factor2Poses3d.hpp  factor2Poses3d2obs.hpp  losses.hpp  nodeLandmark2d.hpp  nodeLandmark3d.hpp  nodePlane4d.hpp  nodePoint3d.hpp  nodePose2d.h  nodePose2d.hpp  nodePose3d.hpp
src/FGraph/skmr/: factor_graph.hpp  solver_dense.hpp
src/FGraph/skmr/factors/: factor2Poses3d.hpp
src/FGraph/tests/: CMakeLists.txt  test_FGraph.cpp  test_solver.cpp
src/IMU/: CMakeLists.txt  README.md  factorBiasPropagation.cpp  factorImuBias.cpp  nodeImuBias.cpp
src/IMU/mrob/: factorBiasPropagation.hpp  factorImuBias.hpp  nodeImuBias.hpp
src/NLOpt/: CMakeLists.txt  NLOpt.cpp  NLOpt.hpp  factor.hpp
src/NLOpt/examples/: CMakeLists.txt  example_NLOpt.cpp
src/PCRegistration/: CMakeLists.txt  README.md  arun.cpp  base_transf.cpp  create_points.cpp  estimate_plane.cpp  gicp.cpp  plane.cpp  planeRegistration.cpp  plane_registration.cpp  plane_to_pc_registration.cpp  weight_point.cpp
src/PCRegistration/examples/: CMakeLists.txt  example_align_mth.cpp  example_fgraph_align.cpp  example_synthetic_plane_traj.cpp  test_EF_Hessian.cpp
src/PCRegistration/factors/: EigenFactorPlane.cpp  factor1Pose1Plane4d.cpp  factor1PosePoint2Plane.cpp  factor1PosePoint2Point.cpp  factor1PoseToPlaneAndPoint.cpp  nodePlane4d.cpp
src/PCRegistration/mrob/: PCRegistration.hpp  arun.hpp  base_transf.hpp  create_points.hpp  estimate_plane.hpp  gicp.hpp  loam.hpp  pc_registration.hpp  plane.hpp  planeRegistration.hpp  plane_registration.hpp  plane_to_pc_registration.hpp
src/PCRegistration/mrob/factors/: EigenFactorPlane.hpp  factor1Pose1Plane4d.hpp  factor1PosePoint2Plane.hpp  factor1PosePoint2Point.hpp  factor1PoseToPlaneAndPoint.hpp  nodePlane4d.hpp
src/PCRegistration/skmr/: base_transf.hpp
src/SE3/: CMakeLists.txt  README.md  SE3.cpp  SE3.hpp  SO3.cpp  SO3.hpp  matrix_base.hpp
src/SE3/examples/: CMakeLists.txt  example_SE3.cpp  numerical_test.cpp
src/SE3/mrob/: SE3.hpp  SO3.hpp
src/SE3/skmr/: SE3.hpp  SO3.hpp
src/VI/: CMakeLists.txt  README.md
src/VI/factors/: factorCamera2d3dConstant.cpp  nodeCameraPinhole.cpp
src/VI/mrob/factors/: factorCamera2d3dConstant.hpp  nodeCameraPinhole.hpp
src/VIO/: README.md
src/VO/: README.md
src/align_mth/: CMakeLists.txt  GICP.cpp  GICP.hpp  ICPL.cpp  ICPL.hpp  arun.cpp  arun.hpp  base_T.cpp  base_T.hpp  create_points.cpp  create_points.hpp
src/align_mth/examples/: CMakeLists.txt  example_align_mth.cpp
src/common/: CMakeLists.txt  README.md  optimizer.cpp  time_profiling.cpp
src/common/mrob/: matrix_base.hpp  optimizer.hpp  time_profiling.hpp
src/geometry/: CMakeLists.txt  README.md  SE3.cpp  SE3cov.cpp  SE3vel.cpp  SE3velCov.cpp  SO3.cpp
src/geometry/examples/: CMakeLists.txt  example_SE3.cpp  numerical_test.cpp  test.SE3.cpp  test.SE3cov.cpp  test_SE3cov.cpp
src/geometry/mrob/: SE3.hpp  SE3cov.hpp  SE3vel.hpp  SE3velCov.hpp  SO3.hpp
src/mrobpy/: CMakeLists.txt  SE3py.cpp
src/skmrpy/: CMakeLists.txt  SE3py.cpp
(+77 files in other folders)
