# Copyright (c) 2018, Skolkovo Institute of Science and Technology (Skoltech)
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
# 
# 
#  setup.cfg
# 
#  Created on: Oct 31, 2020
#       Author: Lyubov Miloserdova
#               miloslubov@gmail.com
#

[metadata]
name = mrob
home-page = https://github.com/MobileRoboticsSkoltech/mrob
author = Gonzalo Ferrer
author_email = G.Ferrer@skoltech.ru
url = https://github.com/MobileRoboticsSkoltech/mrob
download_url = https://github.com/MobileRoboticsSkoltech/mrob
description = The Skoltech Mobile Robotics library (mrob) is a framework for implementing robotics research and projects.
platforms = any
maintainer = Gonzalo Ferrer
maintainer_email = G.Ferrer@skoltech.ru
long-description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0 
license_files = LICENSE

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
packages = find:

[options.package_data]
* = 
    *.so 
    *.dylib
    *.dll
    *.pyd

[sdist]
formats = zip, gztar

