#ADD_EXECUTABLE(example_FGraph_2d_example  example_solver_2d.cpp)
#TARGET_LINK_LIBRARIES(example_FGraph_2d_example FGraph)

ADD_EXECUTABLE(example_FGraph_3d_example  example_solver_3d.cpp)
TARGET_LINK_LIBRARIES(example_FGraph_3d_example FGraph)

ADD_EXECUTABLE(example_FGraph_3d_ladmark_example  example_solver_3d_landmarks.cpp)
TARGET_LINK_LIBRARIES(example_FGraph_3d_ladmark_example FGraph)

# TODO deprecated, remove all the related files
#ADD_EXECUTABLE(example_FGraph_dense_3d  example_solver_dense_3d.cpp)
#TARGET_LINK_LIBRARIES(example_FGraph_dense_3d FGraph common)