IF (BUILD_TESTING)
    ADD_EXECUTABLE(test.SE3 test.SE3.cpp)
    TARGET_LINK_LIBRARIES(test.SE3 SE3 Catch2::Catch2)
    ADD_TEST(NAME test.SE3 COMMAND $<TARGET_FILE:test.SE3>)

    ADD_EXECUTABLE(test.SE3cov test.SE3cov.cpp)
    TARGET_LINK_LIBRARIES(test.SE3cov SE3 Catch2::Catch2)
    ADD_TEST(NAME test.SE3cov COMMAND $<TARGET_FILE:test.SE3cov>)
ENDIF(BUILD_TESTING)
