IF (BUILD_TESTING)
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/external/Catch2/single_include/)

    ADD_EXECUTABLE(test_SE3 test_SE3.cpp)
    TARGET_LINK_LIBRARIES(test_SE3 SE3)
    ADD_TEST(NAME test_SE3 COMMAND $<TARGET_FILE:test_SE3>)

    ADD_EXECUTABLE(test_SE3cov test_SE3cov.cpp)
    TARGET_LINK_LIBRARIES(test_SE3cov SE3)
    ADD_TEST(NAME test_SE3cov COMMAND $<TARGET_FILE:test_SE3cov>)
ENDIF(BUILD_TESTING)
